--- a/app/src/main/res/layout/fragment_task_success.xml
+++ b/app/src/main/res/layout/fragment_task_success.xml
@@ -116,4 +116,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/chatRoomText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/dialog_border"
+        android:padding="5dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="聊天室"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/successContent"
+        app:layout_constraintTop_toTopOf="@+id/successContent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
