--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -164,7 +164,7 @@
     <fragment
         android:id="@+id/signInFragment"
         android:name="com.neil.miruhiru.signin.SignInFragment"
-        android:label="fragment_login"
+        android:label="fragment_sign_in"
         tools:layout="@layout/fragment_sign_in" />
     <action
         android:id="@+id/action_global_signInFragment"
