finish custom bottom sheet ui

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -169,4 +169,15 @@
     <action
         android:id="@+id/action_global_signInFragment"
         app:destination="@id/signInFragment" />
+    <fragment
+        android:id="@+id/customDetailFragment"
+        android:name="com.neil.miruhiru.customdetail.CustomDetailFragment"
+        android:label="fragment_custom_detail"
+        tools:layout="@layout/fragment_custom_detail" />
+    <action android:id="@+id/action_global_customDetailFragment" app:destination="@id/customDetailFragment" />
+    <dialog
+        android:id="@+id/customBottomSheetFragment"
+        android:name="com.neil.miruhiru.customdetail.CustomBottomSheetFragment"
+        android:label="fragment_custom_bottom_sheet"
+        tools:layout="@layout/fragment_custom_bottom_sheet" /><action android:id="@+id/action_global_customBottomSheetFragment" app:destination="@id/customBottomSheetFragment"/>
 </navigation>
