--- a/app/src/main/res/layout/fragment_bottom_step2.xml
+++ b/app/src/main/res/layout/fragment_bottom_step2.xml
@@ -34,15 +34,15 @@
         android:gravity="start|top"
         android:hint="輸入關卡謎題"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/editTextGuide3"
+        app:layout_constraintBottom_toTopOf="@+id/editTextAns"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextGuide3"
+        android:id="@+id/editTextAns"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="120dp"
 
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
