--- a/app/src/main/res/layout/fragment_bottom_step.xml
+++ b/app/src/main/res/layout/fragment_bottom_step.xml
@@ -7,7 +7,7 @@
     tools:context=".customdetail.item.BottomStepFragment">
 
     <EditText
-        android:id="@+id/editTextChallengeName"
+        android:id="@+id/editTextTaskName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -37,7 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextChallengeName" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName" />
 
     <TextView
         android:id="@+id/imageBorder"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/uploadedChallengeImage"
+        android:id="@+id/uploadedTaskImage"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
