--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,9 @@
     <color name="grey">#8E8B81</color>
     <color name="grey_cccccc">#cccccc</color>
     <color name="food_type">#FFFFB907</color>
+    <color name="history_type">#C6443B</color>
+    <color name="couple_type">#F492B4</color>
+    <color name="travel_type">#0A3963</color>
+    <color name="special_type">#706969</color>
     <color name="green_progress">#4C9900</color>
 </resources>
