post task to custom challenge success but stage and image is not correct

--- a/app/src/main/res/layout/fragment_bottom_step2.xml
+++ b/app/src/main/res/layout/fragment_bottom_step2.xml
@@ -13,10 +13,12 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/edit_text_border"
         android:ems="10"
-        android:gravity="start|top"
+        android:gravity="center"
         android:hint="輸入關卡提示"
         android:inputType="textMultiLine"
+        android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextQuestion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -30,10 +32,12 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/edit_text_border"
         android:ems="10"
-        android:gravity="start|top"
+        android:gravity="center"
         android:hint="輸入關卡謎題"
         android:inputType="textMultiLine"
+        android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextAns"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -46,10 +50,12 @@
 
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/edit_text_border"
         android:ems="10"
-        android:gravity="start|top"
+        android:gravity="center"
         android:hint="輸入謎題答案"
         android:inputType="textMultiLine"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
