--- a/app/src/main/res/layout/fragment_bottom_step.xml
+++ b/app/src/main/res/layout/fragment_bottom_step.xml
@@ -13,10 +13,12 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/edit_text_border"
         android:ems="10"
-        android:gravity="start|top"
+        android:gravity="center"
         android:hint="輸入關卡名稱"
         android:inputType="textMultiLine"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageBorder" />
@@ -25,14 +27,16 @@
     <EditText
         android:id="@+id/editTextIntroduction"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="120dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/edit_text_border"
         android:ems="10"
-        android:gravity="start|top"
+        android:gravity="center"
         android:hint="輸入景點介紹"
         android:inputType="textMultiLine"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
