--- a/app/src/main/res/layout/fragment_bottom_step.xml
+++ b/app/src/main/res/layout/fragment_bottom_step.xml
@@ -11,44 +11,48 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/edit_text_border"
         android:ems="10"
         android:gravity="center"
         android:hint="輸入關卡名稱"
         android:inputType="textMultiLine"
+        android:maxLength="10"
         android:padding="10dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageBorder" />
+        app:layout_constraintTop_toBottomOf="@+id/taskName" />
 
 
     <EditText
         android:id="@+id/editTextIntroduction"
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/edit_text_border"
         android:ems="10"
         android:gravity="center"
-        android:hint="輸入景點介紹"
+        android:hint="這是關於這個景點的一些介紹，讓玩家能夠更深入了解這個地方。"
         android:inputType="textMultiLine"
+        android:maxLength="99"
         android:padding="10dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName" />
+        app:layout_constraintTop_toBottomOf="@+id/taskIntroduction" />
 
     <TextView
         android:id="@+id/imageBorder"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/edit_text_border_log"
         android:gravity="center"
@@ -56,7 +60,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/uploadImage" />
 
     <ImageView
         android:id="@+id/uploadedTaskImage"
@@ -74,5 +78,41 @@
         app:layout_constraintStart_toStartOf="@+id/imageBorder"
         app:layout_constraintTop_toTopOf="@+id/imageBorder"
         tools:srcCompat="@null" />
+
+    <TextView
+        android:id="@+id/uploadImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:text="上傳關卡圖片"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/taskName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:text="設定關卡名稱"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageBorder" />
+
+    <TextView
+        android:id="@+id/taskIntroduction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:text="上傳景點介紹"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
