--- a/app/src/main/res/layout/fragment_custom_challenge.xml
+++ b/app/src/main/res/layout/fragment_custom_challenge.xml
@@ -70,6 +70,7 @@
             android:gravity="center"
             android:hint="輸入挑戰標題"
             android:inputType="textMultiLine"
+            android:maxLength="10"
             android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +88,7 @@
             android:gravity="center"
             android:hint="輸入挑戰描述"
             android:inputType="textMultiLine"
+            android:maxLength="99"
             android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
