attach overview fragment to firebase

--- a/app/src/main/res/layout/fragment_custom_challenge.xml
+++ b/app/src/main/res/layout/fragment_custom_challenge.xml
@@ -68,7 +68,7 @@
             android:background="@drawable/edit_text_border"
             android:ems="10"
             android:gravity="center"
-            android:hint="輸入挑戰標題"
+            android:hint="來個漂亮的標題吧"
             android:inputType="textMultiLine"
             android:maxLength="10"
             android:padding="10dp"
@@ -86,7 +86,7 @@
             android:background="@drawable/edit_text_border"
             android:ems="10"
             android:gravity="center"
-            android:hint="輸入挑戰描述"
+            android:hint="這邊你可以跟玩家說明一切有關這個挑戰的事情。"
             android:inputType="textMultiLine"
             android:maxLength="99"
             android:padding="10dp"
