update ui ver 1

--- a/app/src/main/res/layout/fragment_challenge_detail.xml
+++ b/app/src/main/res/layout/fragment_challenge_detail.xml
@@ -10,14 +10,14 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/startButton"
         android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/button_border"
+        android:backgroundTint="@color/deep_yellow"
         android:text="開始挑戰"
         android:textColor="@color/white"
-        android:textSize="28sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
