--- a/app/src/main/res/layout/fragment_challenge_success.xml
+++ b/app/src/main/res/layout/fragment_challenge_success.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/button_border"
+        android:backgroundTint="@color/deep_yellow"
         android:text="發佈"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -29,7 +29,6 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/button_disable_border"
         android:text="取消"
         android:textColor="@color/white"
         android:textSize="24sp"
