--- a/app/src/main/res/layout/fragment_log_dialog.xml
+++ b/app/src/main/res/layout/fragment_log_dialog.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/deep_yellow">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/backToTaskSuccessButton"
@@ -16,7 +17,7 @@
         android:backgroundTint="@color/grey_cccccc"
         android:text="回上一頁"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -63,7 +64,7 @@
         android:gravity="center"
         android:text="留下紀錄"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/backToTaskSuccessButton"
         app:layout_constraintEnd_toEndOf="parent"
