--- a/app/src/main/res/layout/fragment_start_custom.xml
+++ b/app/src/main/res/layout/fragment_start_custom.xml
@@ -44,7 +44,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/deep_yellow"
         android:text="開始創造"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
