--- a/app/src/main/res/layout/fragment_task_dialog.xml
+++ b/app/src/main/res/layout/fragment_task_dialog.xml
@@ -48,9 +48,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/button_border"
+        android:backgroundTint="@color/deep_yellow"
         android:text="提交答案"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
