--- a/app/src/main/res/layout/item_task_task.xml
+++ b/app/src/main/res/layout/item_task_task.xml
@@ -98,13 +98,13 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/startTaskButton"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:background="@drawable/button_border"
+                android:backgroundTint="@color/deep_yellow"
                 android:text="查看挑戰"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/challengeImage"
                 app:layout_constraintEnd_toEndOf="parent"
